[gd_scene load_steps=17 format=2]

[ext_resource path="res://src/level_disco/Actors/Player/State/Idle.gd" type="Script" id=1]
[ext_resource path="res://src/common/StateMachine/StateMachine.gd" type="Script" id=2]
[ext_resource path="res://src/level_disco/Actors/Player/State/Run.gd" type="Script" id=3]
[ext_resource path="res://assets/general/audio/Jump.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/level_africa/art/player/indy.png" type="Texture" id=5]
[ext_resource path="res://src/level_disco/Actors/Player/PlayerDisco.gd" type="Script" id=6]
[ext_resource path="res://src/level_disco/Actors/Player/State/Air.gd" type="Script" id=7]
[ext_resource path="res://src/level_disco/Actors/Player/State/Dash.gd" type="Script" id=8]
[ext_resource path="res://src/level_disco/Level/Conductor/Conductor.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/level_disco/Actors/Player/State/Speak.gd" type="Script" id=10]
[ext_resource path="res://src/level_disco/Actors/Player/State/Dance.gd" type="Script" id=11]

[sub_resource type="Animation" id=1]
resource_name = "fall"
length = 0.01
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 5.0
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.25, 3.75, 4.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 4, 6, 5 ]
}

[sub_resource type="Animation" id=4]
resource_name = "jump"
length = 0.7
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.19, 0.37 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10 ]
}

[sub_resource type="Animation" id=3]
resource_name = "run"
length = 1.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 0 ]
}

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 16, 29.3333 )

[node name="PlayerDisco" type="KinematicBody2D"]
scale = Vector2( 1.5, 1.5 )
z_index = 1
collision_mask = 28
script = ExtResource( 6 )

[node name="DashCooldown" type="Timer" parent="."]
process_mode = 0
wait_time = 2.0
one_shot = true

[node name="JumpCooldown" type="Timer" parent="."]
process_mode = 0
wait_time = 2.0
one_shot = true

[node name="PlatformDetector" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 6 )
collision_mask = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.6
anims/fall = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/jump = SubResource( 4 )
anims/run = SubResource( 3 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 0, -72 )
current = true
process_mode = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -13.3333 )
shape = SubResource( 11 )

[node name="Jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0

[node name="SpeechLabel" type="RichTextLabel" parent="."]
margin_left = -23.0
margin_top = -95.0
margin_right = 105.0
margin_bottom = -31.0
rect_clip_content = false
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
meta_underlined = false
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -16 )
texture = ExtResource( 5 )
hframes = 3
vframes = 4

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 1 )

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Air" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Dash" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Speak" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="Dance" type="Node" parent="StateMachine"]
script = ExtResource( 11 )

[node name="Conductor" parent="." instance=ExtResource( 9 )]
position = Vector2( 0, -186.667 )

[connection signal="perfect_hit" from="." to="." method="_on_PlayerDisco_perfect_hit"]
